[package]
name = "nozzle_flow"
version = "0.2.0"
authors = ["Alonso <jalonsomendoza32@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
